; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_domain.c_dom_init_old.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_domain.c_dom_init_old.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.domain = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (...)* }

@DOM_OLD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.domain*)* @dom_init_old to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dom_init_old(%struct.domain* %0) #0 {
  %2 = alloca %struct.domain*, align 8
  store %struct.domain* %0, %struct.domain** %2, align 8
  %3 = load %struct.domain*, %struct.domain** %2, align 8
  %4 = getelementptr inbounds %struct.domain, %struct.domain* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @DOM_OLD, align 4
  %7 = and i32 %5, %6
  %8 = call i32 @VERIFY(i32 %7)
  %9 = load %struct.domain*, %struct.domain** %2, align 8
  %10 = getelementptr inbounds %struct.domain, %struct.domain* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = icmp ne %struct.TYPE_2__* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @VERIFY(i32 %13)
  %15 = load %struct.domain*, %struct.domain** %2, align 8
  %16 = getelementptr inbounds %struct.domain, %struct.domain* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32 (...)*, i32 (...)** %18, align 8
  %20 = icmp ne i32 (...)* %19, null
  br i1 %20, label %21, label %28

21:                                               ; preds = %1
  %22 = load %struct.domain*, %struct.domain** %2, align 8
  %23 = getelementptr inbounds %struct.domain, %struct.domain* %22, i32 0, i32 1
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32 (...)*, i32 (...)** %25, align 8
  %27 = call i32 (...) %26()
  br label %28

28:                                               ; preds = %21, %1
  ret void
}

declare dso_local i32 @VERIFY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
